# form16-parser

./: .gitignore  .gitmodules  README.md  pyproject.toml
form16_parser/: __init__.py  _exceptions.py  parser.py  pdf.py  table.py
tests/: test_default.py
