[tool.poetry]
name = "form16-parser"
version = "0.1.0"
description = ""
authors = ["Asapanna Rakesh <rakeshark22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.24.4"
pandas = "^2.2.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
tabulate = "^0.9.0"
deepdiff = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
